--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,8 +19,8 @@ spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 
 ## RabbitMQ Configuration
-#spring.rabbitmq.host=rabbitmq
-spring.rabbitmq.host=localhost
+spring.rabbitmq.host=rabbitmq
+#spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=kn
 spring.rabbitmq.password=kn
